<resources>
    <string name="app_name">Tear The Web</string>
    <string name="title_activity_start">Tear The Web</string>
    <string name="title_activity_game">Tear The Web</string>
    <string name="title_activity_high_scores">High Scores</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_webs">Choose web</string>
    <string name="start_tear_the_web">Tear The Web</string>
    <string name="start_spiders">(and get rid of spiders)</string>
    <string name="start_new_game">&gt; New Game &lt;</string>
    <string name="start_continue_game">&gt; Continue &lt;</string>
    <string name="start_high_scores">&gt; High Scores &lt;</string>
    <string name="start_more">more</string>
    <string name="game_spiders">spiders: %d</string>
    <string name="game_lives">lives: %d</string>
    <string name="game_level">level: %d</string>
    <string name="game_score">score: %d</string>
    <string name="game_game_over">Game Over!</string>
    <string name="high_scores_action_clear">clear</string>
    <string name="high_scores_score">Score</string>
    <string name="high_scores_date">Date</string>
    <string name="high_scores_no_games">Empty!</string>
    <string name="help_how_to_play">How to play:</string>
    <string name="help_text_1">Swipe over the web threads to grab and pull them.</string>
    <string name="help_text_2">Beware of spiders! Their bites are venomous!</string>
    <string name="help_text_3">You get points for every damaged thread.</string>
    <string name="help_text_4">You get even more points for every spider thrown off screen.</string>
    <string name="help_text_5">New level is started when there are no more spiders on the web.</string>
    <string name="app_copyright">Copyright © 2016 Piotr Jankowski</string>
    <string name="app_license">Tear The Web comes with ABSOLUTELY NO WARRANTY; for details click on the LICENSE button. This is free software, and you are welcome to redistribute it under certain conditions; click on the LICENSE button for details.</string>
    <string name="about_license">License</string>
    <string name="about_source">Source</string>
</resources>
